--- a/src/main/webapp/css/curso.css
+++ b/src/main/webapp/css/curso.css
@@ -1,4 +1,10 @@
-.employees-list{
+body {
+	text-align: center;
+	max-width: 1000px;
+	margin: 0 auto;
+}
+
+.employees-list {
 	margin: 10px 0;
 }
 
@@ -9,4 +15,24 @@
 
 .error {
 	color: red;
+}
+
+.welcome a {
+	display: block;
+	margin: 10px 0;
+	font-size: 20px;
+	line-height: 30px;
+}
+
+.welcome ol {
+	list-style-type: none;
+}
+
+.card {
+	box-shadow: 10px 10px 5px #888888;
+	border: 2px solid #888888;
+	border-radius: 10px;
+	padding: 25px;
+	max-width: 900px;
+	margin: 20px auto;
 }
